Template.yaml
AWSTemplateFormatVersion: '2010-09-09'
parameters:
  Ec2Ami:
    Type: String
    Description: Lista de AMis para utilizar en nuestro despliegue
    Default: ami-03f65b8614a860c29, ami-080f7286ffdd988ee
  SGPort: 
    Type: Number
    Default: 80
    Description: Puerto a utilizar en nuestro grupo de seguridad para habilitar trafico http
  NombreDeLlave:
    Description: Nombre de una llave valida para conectarse por ssh o rdp
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair
  TipoInstancia: 
    Description: El tipo de instancia a utilizar
    Type: String
    Default: t2.micro
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge, t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge]
    

Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-west-2
      ImageId: ami-05d38da78ce859165
      InstanceType: t2.micro
      KeyName: keypair-oregon
      BlockDeviceMappings: 
        - DeviceName: "/dev/sdm"
          Ebs: 
            VolumeType: "gp3"
            DeleteOnTermination: "true"
            VolumeSize: "20"
      SecurityGroups:
        - Ref: "ServerSecurityGroup"


  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections from specified CIDR ranges
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 192.0.2.0/24
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.0.2.0/24
